# osu-maestro

./: .gitignore  Cargo.toml  README.md  app.config.ts  biome.json  bun.lockb  package.json  tailwind.config.cjs  tsconfig.json  ui.config.json
src/: app.tsx  bindings.ts  entry-server.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs  overlay.rs  server.rs
src-tauri/src/core/: config.rs  server.rs
src-tauri/src/routes/: mod.rs  ws.rs
src/components/: DarkModeToggle.tsx  Footer.tsx  Header.tsx  Layout.tsx
src/routes/: index.tsx
