[package]
name = "osu_maestro"
version = "0.0.0"
description = "Maestro"
authors = ["you"]
license = ""
repository = "https://github.com/Ns2KRacy/maestro"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
# tauri related
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-websocket = "2.0.0-rc"

# async runtime
tokio = { version = "1.40.0", features = ["full"] }

# serialization and deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# openapi
utoipa = { version = "4.2.3", features = ["axum_extras", "openapi_extensions"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }

# error handling
anyhow = "1.0.86"
thiserror = "1.0.63"

# web framework
axum = { version = "0.7.5", features = ["tracing", "ws"] }
axum-extra = { version = "0.9.3", features = ["cookie", "typed-header"] }
hyper = { version = "1.4.1", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }

# crypto
bcrypt = "0.15.1"
data-encoding = "2.6.0"
rand = "0.8.5"
ring = "0.17.8"

# logging
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }

# utility
futures = "0.3.30"
futures-util = "0.3.30"
chrono = "0.4.38"
once_cell = "1.19.0"
config = "0.14.0"
specta = "=2.0.0-rc.20"
specta-typescript = "0.0.7"
tauri-specta = { version = "=2.0.0-rc.15", features = [
    "derive",
    "javascript",
    "typescript",
] }


# Optimize for smaller binary size
[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
